--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
     <main
       class="flex items-center justify-center h-screen md:bg-fixed bg-center bg-cover custom-img w-full"
     >
-      <!-- <div
-        class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
-      ></div> -->
       <div
         class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem] "
       >
@@ -100,19 +97,19 @@
     </main>
     <section
       id="about"
-      class="w-full h-screen flex justify-center items-center z-10"
+      class="w-full h-screen flex justify-center items-center"
     >
-      <div class="w-[1240px] h-[700px] shadow-2xl bg-fuchsia-50 sm:m-2 z-10">
-        <div class="w-full h-[320px] bg-center bg-cover card-img"></div>
-        <div>
-          <h2 class="p-8 sm:p-16 text-3xl font-bold uppercase text-gray-700">
+      <div class="w-[1240px] shadow-2xl bg-fuchsia-50 sm:m-2">
+        <div class="w-full h-[300px] bg-center bg-cover card-img"></div>
+        <div class=" sm:p-20 text-gray-700">
+          <h2 class=" p-4 text-3xl font-bold uppercase ">
             Vilka är vi.
           </h2>
-          <p class="py-4 px-4 sm:px-20 my-8">
+          <p class="p-6">
             DiagTech-Webbutveckling är ett ny startad företag av personer som
-            brinner för skapa nya saker som hjälper individer eller företag att
+            brinner för att skapa nya lösningar som hjälper individer eller företag att
             lösa deras problem på det digitala planen. Vi älskar att skapa en
-            User vänlig Design, samt funktonell App Hemsida.
+            User vänlig Design, samt funktonella Appar eller Hemsidor.
           </p>
         </div>
       </div>
@@ -122,26 +119,26 @@
       class="w-full h-full lg:h-screen flex justify-center items-center bg-center md:bg-fixed bg-cover services-img"
     >
       <div
-        class="w-[1240px] h-auto lg:h-[400px] shadow-2xl flex flex-col text-white bg-black/70 mt-36"
+        class="w-[1240px] h-auto lg:h-[400px] shadow-2xl flex flex-col text-white  mt-36"
       >
         <div class="w-full lg:flex justify-evenly items-center">
           <button
-            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class=" hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
             <h2 class="p-4 sm:p-6 sm:mt-4">Webbutveckling</h2>
           </button>
           <button
-            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class=" hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
             <h2 class="p-4 sm:p-6 sm:mt-4">Design & UX</h2>
           </button>
           <button
-            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class=" hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
             <h2 class="p-4 sm:p-6 sm:mt-4">Hosting & förvaltning</h2>
           </button>
           <button
-            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class=" hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
             <h2 class="p-4 sm:p-6 sm:mt-4">SEO Marknadsföring</h2>
           </button>
@@ -159,128 +156,7 @@
           </div>
           <div id="webb" class=" hidden">
             <p class="text-center p-4 text-xl">Vi använder nädanstående verktyg för att bygga hemsida eller webb app</p>
-          <div  class=" grid md:grid-cols-2 lg:grid-cols-4 gap-8 ">
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/html.png'
-                    alt=" Html icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>HTML</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/css.png'
-                    alt=" Css icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>CSS</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/javascript.png'
-                    alt=" Javascript icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>JavaScript</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/react.png'
-                    alt=" React icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>React</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/nextjs.png'
-                    alt=" Next.js icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>NextJs</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/node.png'
-                    alt=" Node.js icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>NodeJs</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/firebase.png'
-                    alt=" Firebase icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>FIREBASE</h3>
-                </div>
-              </div>
-            </div>
-            <div class=" p-6 shadow-xl rounded-xl ">
-              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
-                <div class=" m-auto">
-                  <Image
-                    src='./images/tailwind.png'
-                    alt=" Tailwind icon"
-                    width="64px"
-                    height="64px"
-                  />
-                </div>
-                <div class=" flex flex-col items-center justify-center">
-                  <h3>Tailwind</h3>
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div>
         </div>
         
