--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           >
             <div class="grid md:grid-cols-2 gap-4 w-full py-2">
               <div class="flex flex-col">
-                <label class="uppercase text-sm py-2">Name</label>
+                <label class="uppercase text-sm py-2">Namn</label>
                 <input
                   class="border-2 rounded-lg p-3 flex border-gray-300"
                   type="text"
@@ -278,7 +278,7 @@
                 />
               </div>
               <div class="flex flex-col">
-                <label class="uppercase text-sm py-2"> Phone Number </label>
+                <label class="uppercase text-sm py-2"> Telefon nr </label>
                 <input
                   class="border-2 rounded-lg p-3 flex border-gray-300"
                   type="text"
@@ -295,7 +295,7 @@
               />
             </div>
             <div class="flex flex-col py-2">
-              <label class="uppercase text-sm py-2">Subject</label>
+              <label class="uppercase text-sm py-2">Ämne</label>
               <input
                 class="border-2 rounded-lg p-3 flex border-gray-300"
                 type="text"
@@ -303,7 +303,7 @@
               />
             </div>
             <div class="flex flex-col py-2">
-              <label class="uppercase text-sm py-2">Message</label>
+              <label class="uppercase text-sm py-2">Meddelande</label>
               <textarea
                 class="border-2 rounded-lg p-3 border-gray-300"
                 rows="10"
@@ -313,16 +313,16 @@
             <button
               class="w-full p-4 text-gray-100 bg-blue-500 mt-4 rounded-xl text-xl uppercase"
             >
-              Send Message
+              Skicka
             </button>
           </form>
         </div>
       </div>
     </section>
     <footer
-      class="sm:flex max-w-[1240px] mx-auto items-center justify-around h-20"
+      class="sm:flex max-w-[1240px] mx-auto items-center justify-around h-36 p-4"
     >
-      <div class="flex items-center justify-center">
+      <div class="flex items-center justify-center p-4">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -340,7 +340,7 @@
         </svg>
         <p class="mx-2">Högseröd 531<br />241-62 Löberöd</p>
       </div>
-      <div class="flex items-center justify-center">
+      <div class="flex items-center justify-center p-4">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -358,8 +358,9 @@
           ></path>
         </svg>
         <p class="mx-2">+46702060923</p>
+        
       </div>
-      <div class="flex items-center justify-center">
+      <div class="flex items-center justify-center p-4">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -379,6 +380,7 @@
         </svg>
         <p class="mx-2">info@diagtech.se</p>
       </div>
+      <p class=" text-center p-4">&copy; DiagTech 2023</p>
     </footer>
     <script src="script.js"></script>
   </body>
