--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       id="navbar"
     >
       <div
-        class="text-gray-300 flex max-w-[1240px] m-auto justify-between items-center p-6"
+        class="text-gray-300 flex max-w-[1240px] m-auto justify-between items-center p-4"
         id="nav-text"
       >
         <div class="font-bold text-xl underline">DiagTech</div>
@@ -109,9 +109,9 @@
       id="about"
       class="w-full h-screen flex justify-center items-center"
     >
-      <div class="w-[1240px] shadow-2xl bg-fuchsia-50 sm:m-2">
-        <div class="w-full h-[300px] bg-center bg-cover card-img"></div>
-        <div class="sm:p-20 text-gray-700">
+      <div class="max-w-[1240px]  min-h-[500px] shadow-2xl bg-fuchsia-50 my-6 md:mx-12">
+        <div class="w-full min-h-[200px] bg-center bg-cover card-img"></div>
+        <div class="sm:p-8 text-gray-700">
           <h2 class="p-4 text-3xl font-bold uppercase">Vilka är vi.</h2>
           <p class="p-4">
             DiagTech-Webbutveckling är ett företag bestående av personer som
@@ -135,7 +135,7 @@
       class="w-full lg:h-screen flex justify-center items-center bg-center md:bg-fixed bg-cover services-img"
     >
       <div
-        class="w-[1240px] h-full lg:h-[460px] shadow-2xl flex flex-col text-white mt-36"
+        class="w-[1240px] h-full lg:max-h-[440px] shadow-2xl flex flex-col text-white mt-36 md:mx-12"
       >
         <div class="w-full lg:flex justify-evenly items-center">
           <button
@@ -224,7 +224,7 @@
     </section>
     <section
       id="projects"
-      class="w-full h-screen bg-white flex flex-col justify-center items-center"
+      class="w-full h-screen bg-white flex flex-col justify-center items-center mt-4"
     >
       <h2 class="uppercase md:text-xl font-bold text-gray-600 p-2">
         urval kunder som har använt oss
