--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div>
           <div id="webb" class="hidden">
             <p
-              class="text-left py-16 px-6 md:px-16 md:text-xl leading-8 tracking-widest"
+              class="text-left py-16 p-6 md:px-16 md:text-xl leading-8 tracking-widest"
             >
               Letar du efter ett pålitligt team som kan hjälpa dig med att skapa
               en modern, användarvänlig och snabb webbplats eller app? Då är vi
@@ -289,9 +289,8 @@
           class="col-span-3 w-full h-auto shadow-xl shadow-gray-400 rounded-xl lg:p-4 bg-blue-50 p-4"
         >
           <form
-            action="https://getform.io/f/bbd9738e-6414-40b1-871a-51ea1b47b694"
-            method="POST"
-            enctype="multipart/form-data"
+          action="https://formsubmit.co/info@diagtech.se" method="POST"
+            
           >
             <div class="grid md:grid-cols-2 gap-4 w-full py-2">
               <div class="flex flex-col">
